[package]
name = "sensor-fusion"
version = "0.1.0"
edition = "2024"
authors = ["Martin Budden"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/martinbudden/crate-sensor-fusion"
description = "Sensor Fusion Filters for Attitude and Heading Reference Systems (AHRS)"
keywords = ["Sensor Fusion", "Filter", "Mahony", "Madgwick", "IMU", "AHRS", "no-std"]
categories = ["Embedded development", "No standard library", "Science::Robotics"]


[features]
default = ["libm"]
std = ["vector-quaternion-matrix/std"]
libm = ["num-traits/libm", "vector-quaternion-matrix/libm"]
no_align = ["vector-quaternion-matrix/no_align"]
simd = ["vector-quaternion-matrix/simd"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[build-dependencies]
rustc_version = "0.4.1"

[dependencies]
vector-quaternion-matrix = { git = "https://github.com/martinbudden/crate-vector-quaternion-matrix", default-features = false }
num-traits = { version = "0.2.19", default-features = false }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
rand = "0.10.1" 
# approx = { version = "0.5", default-features = false }

# see https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
opt-level = 0
debug = "line-tables-only"
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true

[profile.release]
opt-level = 3
debug = false
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[profile.release-lto]
inherits = "release"
lto = true

[[bench]]
name = "sf_bench"
harness = false
