[package]
name = "sensor-fusion"
version = "0.1.8"
edition = "2024"
authors = ["Martin Budden"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/martinbudden/crate-sensor-fusion"
description = "Sensor Fusion Filters for Attitude and Heading Reference Systems (AHRS)"
keywords = ["sensor-fusion", "no-std", "Madgwick", "Mahony", "Kalman"]
categories = [
    "embedded",
    "mathematics",
    "no-std",
    "science::robotics",
    "aerospace::drones",
]

[build-dependencies]
rustc_version = "0.4.1"

[features]
default = ["libm"]
std = ["num-traits/std", "vqm/std"] # Propagates std upwards properly
libm = ["dep:libm", "num-traits/libm", "vqm/libm"]
no_align = ["vqm/no_align"]
simd = ["vqm/simd"]

[dependencies]
# Set default-features = false to prevent host target leakage
vqm = { version = "0.1.13" }
#vqm = { git = "https://github.com/martinbudden/crate-vector-quaternion-matrix" }
#vqm = { path = "../vqm"  }
num-traits = { version = "0.2.19", default-features = false }
libm = { version = "0.2.16", optional = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
rand = "0.10.1"
approx = { version = "0.5.1", default-features = false }

# see https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
opt-level = 0
debug = "line-tables-only"
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true

[profile.release]
opt-level = 3
debug = false
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[profile.release-lto]
inherits = "release"
lto = true

[[bench]]
name = "sf_bench"
harness = false
